name: binstash
version: 0.0.1
homepage: http://binstash.com
synopsis: BinStash package management command line utility
description: Manage your BinStash packages
license: BSD3
author: Blake Smith
build-type: Simple
cabal-version: >= 1.2

library
  build-depends: aeson, base, bytestring, cmdargs, conduit, directory, filepath, http-conduit, http-types, mtl, ghc-prim, transformers
  exposed-modules: Binstash.Args
                   Binstash.Cmd
                   Binstash.Configuration
                   Binstash.Http
  ghc-options: -Wall

executable binstash
  main-is: Main.hs
  ghc-options: -Wall